--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+}
+
+.container {
+  background: #deb887;
 }/*# sourceMappingURL=styles.css.map */
