--- a/styles.scss
+++ b/styles.scss
@@ -13,3 +13,10 @@ body {
 .container {
   background: #deb887;
 }
+
+hr {
+  background: #a52a2a;
+  color: #a52a2a;
+  height: 0.5em;
+  width: 100%;
+}
