align heading in center

--- a/styles.css
+++ b/styles.css
@@ -21,4 +21,8 @@ hr {
   color: #a52a2a;
   height: 0.5em;
   width: 100%;
+}
+
+.head-content {
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
