--- a/styles.scss
+++ b/styles.scss
@@ -26,4 +26,10 @@ hr {
 // header section
 .head-content {
   text-align: center;
+
+  h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    line-height: 1em;
+  }
 }
