add margin bottom and line height to h1

--- a/styles.css
+++ b/styles.css
@@ -32,4 +32,8 @@ hr {
   font-size: 3rem;
   text-transform: uppercase;
   line-height: 1em;
+  margin-bottom: 0.5em;
+}
+.head-content p {
+  margin-bottom: 0.2em;
 }/*# sourceMappingURL=styles.css.map */
