--- a/styles.scss
+++ b/styles.scss
@@ -33,5 +33,10 @@ hr {
     font-size: 3rem;
     text-transform: uppercase;
     line-height: 1em;
+    margin-bottom: 0.5em;
+  }
+
+  p {
+    margin-bottom: 0.2em;
   }
 }
