--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,11 @@ hr {
   font-size: 3rem;
   text-transform: uppercase;
   line-height: 1em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
 }
 .head-content p {
   margin-bottom: 1.2em;
+  font-size: 1.3rem;
+  font-family: sans-serif;
+  font-style: italic;
 }/*# sourceMappingURL=styles.css.map */
