--- a/styles.scss
+++ b/styles.scss
@@ -33,10 +33,13 @@ hr {
     font-size: 3rem;
     text-transform: uppercase;
     line-height: 1em;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.3em;
   }
 
   p {
     margin-bottom: 1.2em;
+    font-size: 1.3rem;
+    font-family: sans-serif;
+    font-style: italic;
   }
 }
