--- a/styles.scss
+++ b/styles.scss
@@ -18,13 +18,6 @@ body {
   padding: 2em;
 }
 
-hr {
-  background: #a52a2a;
-  color: #a52a2a;
-  height: 0.3em;
-  width: 100%;
-}
-
 // header section
 .head-content {
   text-align: center;
@@ -42,4 +35,12 @@ hr {
     font-family: sans-serif;
     font-style: italic;
   }
+}
+
+// MAIN SECTION
+hr {
+  background: #a52a2a;
+  color: #a52a2a;
+  height: 0.3em;
+  width: 100%;
 }
