--- a/styles.css
+++ b/styles.css
@@ -39,4 +39,9 @@ hr {
   color: #a52a2a;
   height: 0.3em;
   width: 100%;
+}
+
+.menu-name {
+  padding: 1em 0;
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
