--- a/styles.scss
+++ b/styles.scss
@@ -9,6 +9,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  padding: 0 0.5em;
 }
 
 .container {
@@ -48,4 +49,8 @@ hr {
 .menu-name {
   padding: 1em 0;
   text-align: center;
+
+  h2 {
+    font-size: 2.4rem;
+  }
 }
