--- a/styles.css
+++ b/styles.css
@@ -48,4 +48,12 @@ hr {
 }
 .menu-name h2 {
   font-size: 2.4rem;
+}
+
+.menu > .item-price {
+  display: flex;
+  justify-content: space-between;
+  line-height: 2em;
+  font-size: 1.2rem;
+  gap: 0.1em;
 }/*# sourceMappingURL=styles.css.map */
