--- a/styles.scss
+++ b/styles.scss
@@ -54,3 +54,11 @@ hr {
     font-size: 2.4rem;
   }
 }
+
+.menu > .item-price {
+  display: flex;
+  justify-content: space-between;
+  line-height: 2em;
+  font-size: 1.2rem;
+  gap: 0.1em;
+}
