--- a/styles.css
+++ b/styles.css
@@ -56,4 +56,8 @@ hr {
   line-height: 2em;
   font-size: 1.2rem;
   gap: 0.1em;
+}
+
+.menu > .mb-b {
+  margin-bottom: 1em;
 }/*# sourceMappingURL=styles.css.map */
