--- a/styles.scss
+++ b/styles.scss
@@ -66,3 +66,10 @@ hr {
 .menu > .mb-b {
   margin-bottom: 1em;
 }
+
+// FOOTER SECTION
+.copyrights {
+  text-align: center;
+  padding-top: 1em;
+  line-height: 1.8em;
+}
