--- a/styles.scss
+++ b/styles.scss
@@ -72,4 +72,26 @@ hr {
   text-align: center;
   padding-top: 1em;
   line-height: 1.8em;
+
+  // LVHA
+  a {
+    color: #000;
+    transition: color 0.15s;
+  }
+
+  a:link {
+    color: #000;
+  }
+
+  a:visited {
+    color: #08225a;
+  }
+
+  a:hover {
+    color: #a52a2a;
+  }
+
+  a:active {
+    color: #a52a2ad8;
+  }
 }
