--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   padding: 0 0.5em;
+  font-family: sans-serif;
 }
 
 .container {
@@ -27,6 +28,7 @@ body {
   text-transform: uppercase;
   line-height: 1em;
   margin-bottom: 0.3em;
+  font-family: serif;
 }
 .head-content p {
   margin-bottom: 1.2em;
@@ -48,6 +50,7 @@ hr {
 }
 .menu-name h2 {
   font-size: 2.4rem;
+  font-family: serif;
 }
 
 .menu > .item-price {
