--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   padding: 0 0.5em;
+  font-family: sans-serif;
 }
 
 .container {
@@ -28,6 +29,7 @@ body {
     text-transform: uppercase;
     line-height: 1em;
     margin-bottom: 0.3em;
+    font-family: serif;
   }
 
   p {
@@ -52,6 +54,7 @@ hr {
 
   h2 {
     font-size: 2.4rem;
+    font-family: serif;
   }
 }
 
